# oxidegate

./: .gitignore  Cargo.toml  README  README.md  config.yml  dockerfile
.github/workflows/: cargo-test.yml  rust-lint.yml
certs/: cert.pem  key.pem
k6/: script.js
src/: config.rs  lib.rs  main.rs  proxy.rs  types.rs
src/load_balancer/: factory.rs  least_connections_lb.rs  mod.rs  round_robin_lb.rs  weighted_round_robin_lb.rs
src/proxy_service/: gateway_body.rs  mod.rs  proxy_bridge.rs  proxy_handler.rs
src/server/: http.rs  https.rs  mod.rs  server_manager.rs
tests/: load_balancer.rs
