[package]
name = "cloud-native-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
async-trait = "0.1"

log = { version = "0.4", features = ["std", "serde"] }
env_logger = "0.11.6"